--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chai": "^4.1.2",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "codemirror": "^5.20.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
@@ -56,6 +57,9 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
+    "isparta-loader": "^2.0.0",
+    "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -67,7 +71,11 @@
     "karma-webpack": "^2.0.2",
     "less": "^2.7.3",
     "less-loader": "^2.2.3",
+    "lodash": "^4.16.6",
+    "lolex": "^1.4.0",
+    "marked": "^0.3.6",
     "mocha": "^3.2.0",
+    "moment": "^2.15.2",
     "nightwatch": "^0.9.12",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -80,6 +88,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
+    "uikit": "^2.27.2",
     "url-loader": "^0.5.8",
     "validation": "0.0.1",
     "vee-validate": "^2.0.0-beta.17",
