--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "validation": "0.0.1",
     "vee-validate": "^2.0.0-beta.17",
     "vue-loader": "^13.3.0",
+    "vue-resource": "^1.3.5",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vue-validator": "^3.0.0-alpha.2",
